fixing tests failing